<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".Controler.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="85dp"
            android:layout_height="49dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:background="@drawable/home_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="168dp"
                android:layout_height="66dp"
                android:layout_marginTop="10dp"
                android:text="@string/textHome1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:text="@string/textHome2"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="379dp"
            android:layout_height="79dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/home_profesionalism" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:text="@string/textHome3"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textHome4" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="379dp"
            android:layout_height="79dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/home_incredere" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:text="@string/textHome5"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:text="@string/textHome6" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="379dp"
            android:layout_height="79dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/home_siguranta" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:text="@string/textHome7"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textHome8" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="379dp"
            android:layout_height="79dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/home_transparenta" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:text="@string/textHome9"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textHome10" />

    </LinearLayout>

</ScrollView>

