<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="@drawable/sidebar_backgroud"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/textAbout1"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="377dp"
            android:layout_height="159dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/home_despre" />

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/textAbout2"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/textAbout3"
            android:textSize="20sp" />

        <TextView
            android:layout_width="379dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/textAbout4"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textAbout5"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>