<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="@drawable/sidebar_backgroud"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/textApply1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/textApply2"
            android:textAlignment="center"
            android:textSize="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply4"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:hint="Name"
            android:inputType="text"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply5"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/vornameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:hint="Vorname"
            android:inputType="text"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply6"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/firmennameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:hint="Firmenname"
            android:inputType="textEmailAddress"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply7"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/anschriftEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:hint="Anschrift"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number|phone"
            android:text="@string/textApply8"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/telefonEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:hint="Telefon"
            android:inputType="text"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply9"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/emailDeEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:hint="email"
            android:inputType="text"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply10"
            android:textSize="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/zeceMuncitoriCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="10"
                android:textSize="10dp" />

            <CheckBox
                android:id="@+id/cincizeciMuncitoriCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="50"
                android:textSize="10dp" />

            <CheckBox
                android:id="@+id/osutaMuncitoriCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="100"
                android:textSize="10dp" />

            <CheckBox
                android:id="@+id/cincisuteMuncitoriCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="500"
                android:textSize="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply11"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/forderungenEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:hint="email"
            android:inputType="text"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply12"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/vorteileEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:hint="email"
            android:inputType="text"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply13"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/andereDetailsEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditText"
            android:inputType="text"
            android:textSize="10dp" />

        <Button
            android:id="@+id/trimitereFormularButonDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorButton"
            android:text="@string/textApply14" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textApply15"
            android:textSize="10dp" />

    </LinearLayout>
</ScrollView>