<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <!-- <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>-->

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="@drawable/sidebar_backgroud"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="25dp"
                android:text="@string/textContact1"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:text="@string/textContact2"
            android:textAlignment="center"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:text="@string/textContact3"
            android:textAlignment="center"
            android:textSize="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:background="@color/colorButton"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/textContact4"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_place" />

                <TextView
                    android:layout_width="152dp"
                    android:layout_height="66dp"
                    android:text="Arad"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_phone" />

                <TextView
                    android:layout_width="152dp"
                    android:layout_height="66dp"
                    android:inputType="phone"
                    android:text="+40 785 282 855"
                    android:autoLink="phone"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_email" />

                <TextView
                    android:id="@+id/emailLink"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:autoLink="email"
                    android:clickable="true"
                    android:text="office@autorekrut.com"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_link" />

                <TextView
                    android:id="@+id/contactLink"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:clickable="true"
                    android:autoLink="web"
                    android:text="http://www.autorekrut.com/"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/yourNameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorEditText"
            android:hint="Your name"
            android:inputType="text" />

        <EditText
            android:id="@+id/yourEmailEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorEditText"
            android:hint="Your e-mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/subjectEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorEditText"
            android:hint="Subject"
            android:inputType="text" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorEditText"
            android:hint="Message"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:scrollHorizontally="false" />

        <Button
            android:id="@+id/trimitereMesajButon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorButton"
            android:text="@string/textContact5" />
    </LinearLayout>
</ScrollView>